# MyDayAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: config.py  exceptions.py
src/database/: database.py
src/database/models/: base.py  post.py  user.py
src/endpoints/: auth.py  post.py  user.py
src/schemas/: post.py  user.py
src/services/: auth.py
src/services/crud/: post.py  user.py
